--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom --coverage --watchAll=false",
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext=tsx --ext=js --ext=jsx --fix ./src"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +39,34 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.22.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react": "^7.22.0",
+    "jest-dom": "^4.0.0",
+    "react-addons-test-utils": "^15.6.2",
+    "ts-jest": "^26.5.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(ts|tsx|js|jsx)$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "src/**/*.{tsx,js,jsx,ts}",
+      "!src/index.tsx",
+      "!src/react-app-env.d.ts",
+      "!src/reportWebVitals.ts",
+      "!src/setupTests.ts"
     ]
   }
 }
