--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-react": "^7.12.13",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "enzyme": "^3.11.0",
@@ -55,6 +56,7 @@
     "eslint-plugin-react": "^7.22.0",
     "jest-dom": "^4.0.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.14.0",
     "ts-jest": "^26.5.3"
   },
   "jest": {
