Adding cypress tests, adding jest snapshot tests
This allows for further frontend testing and basic integration testing with cypress

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,5 +42,8 @@
         "react": {
             "version": "detect"
         }
-    }
+    },
+    "ignorePatterns": [
+        "src/cypress"
+    ]
 }
