--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -36,6 +36,8 @@ jobs:
         run: npm run lint
       - name: Run jest tests
         run: npm test
+      - name: Run cypress tests
+        run: npm run cy:run-record
       - name: Upload unit test coverage
         if: success()
         uses: codecov/codecov-action@v1
