--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --coverage --watchAll=false",
+    "test": "react-scripts test --env=jsdom --coverage --watchAll=false ./src/components",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext=tsx --ext=js --ext=jsx --fix ./src"
+    "lint": "eslint --ext=tsx --ext=js --ext=jsx --fix ./src",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:run-record": "cypress run --record --key 138928d3-61ed-4b27-9f40-fbed614d3596"
   },
   "eslintConfig": {
     "extends": [
@@ -44,11 +47,14 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@cypress/code-coverage": "^3.9.2",
+    "@cypress/instrument-cra": "^1.4.0",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "cypress": "^6.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.22.0",
@@ -57,6 +63,7 @@
     "jest-dom": "^4.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.14.0",
+    "start-server-and-test": "^1.12.0",
     "ts-jest": "^26.5.3"
   },
   "jest": {
@@ -64,7 +71,7 @@
       "^.+\\.(ts|tsx|js|jsx)$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "src/**/*.{tsx,js,jsx,ts}",
+      "src/**/*.{tsx,ts}",
       "!src/index.tsx",
       "!src/react-app-env.d.ts",
       "!src/reportWebVitals.ts",
